--- a/index.html
+++ b/index.html
@@ -25,5 +25,57 @@
         <ul id="census-list"></ul>
     </div>
 </body>
+	
+	
+	
+	<table summary="para teste">
+02
+<caption></caption>
+03
+<thead>
+04
+<tr><th colspan="4">T</th></tr>
+05
+</thead>
+06
+<tfoot>
+07
+<tr><td colspan="2">V</td></tr>
+08
+</tfoot>
+09
+<tbody>
+10
+<tr>
+11
+<td rowspan="1"> S</td>
+12
+<td><b>T</td></b>
+13
+<td>000</td>
+14
+<td>T</td>
+15
+</tr>
+16
+<tr>
+17
+<td>$500</td>
+18
+<td>$640</td>
+19
+<td>$650</td>
+20
+</tr>
+21
+</tbody>
+22
+</table>
+	
+	
+	
+	
+	
+	
 
 </html>
